--- a/src/sass/components/_photos.scss
+++ b/src/sass/components/_photos.scss
@@ -103,8 +103,8 @@
 
 .lightbox-image {
     @extend %container;
-    height: 75%;
-    margin-top: 12.5%;
+    height: 75vh;
+    margin-top: 12.5vh;
 
     background-size: contain;
     background-repeat: no-repeat;
